# ha-lg-soundbar

./: .gitignore  CHANGELOG.md  NOTICE  README.md  hacs.json  pyproject.toml  requirements_test.txt
.github/workflows/: tests.yml  validate.yml
custom_components/lg_soundbar_plus/: __init__.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  media_player.py  number.py  protocol.py  select.py  strings.json  switch.py
custom_components/lg_soundbar_plus/translations/: en.json
tests/: conftest.py  test_protocol.py
