[project]
name = "ha-lg-soundbar"
version = "0.1.8"
description = "Home Assistant integration for LG soundbars over local network (TCP 9741)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
